--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div>Hello World!</div>
+<div class="mian-container">
+  <router-outlet></router-outlet>
+</div>
 
-
-<router-outlet></router-outlet>
