--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,13 @@
 /* You can add global styles to this file, and also import other style files */
+
+@import "primeng/resources/themes/lara-light-blue/theme.css";
+@import "primeng/resources/primeng.css";
+
+
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+@import 'assets/fonts/yekan/yekanbakh.css';
+
+*{font-family: yekanbakh,serif}
