--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,1 +1,5 @@
-<app-new-restaurants-list></app-new-restaurants-list>
+<div class="card">
+    <app-new-restaurants-list></app-new-restaurants-list>
+
+    <app-taste-of-people></app-taste-of-people>
+</div>
