--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -2,4 +2,6 @@
     <app-new-restaurants-list></app-new-restaurants-list>
 
     <app-taste-of-people></app-taste-of-people>
+
+    <app-popular-dishes></app-popular-dishes>
 </div>
