--- a/src/app/components/home/new-restaurants-list/new-restaurants-list.component.html
+++ b/src/app/components/home/new-restaurants-list/new-restaurants-list.component.html
@@ -1,7 +1,7 @@
 <section class="tw-flex tw-flex-col">
     <header>
         <div class="tw-flex tw-flex-row tw-place-content-between tw-m-8">
-            <span>new restaurants</span>
+            <span class="tw-text-color1">new restaurants</span>
             <div class="tw-w-4 tw-rounded-lg">
                 <span class="material-icons">
                     account_circle
@@ -24,7 +24,7 @@
 
             @if (showMore) {
             <div class="tw-flex tw-place-content-center tw-justify-center">
-                <button class="tw-bg-color1 tw-rounded-md tw-text-color5 tw-h-8 tw-w-20">show more</button>
+                <button class="tw-bg-color3 tw-rounded-md tw-text-color5 tw-h-8 tw-w-20">show more</button>
             </div>
             }
         </div>
