--- a/src/app/components/home/taste-of-people/taste-of-people.component.html
+++ b/src/app/components/home/taste-of-people/taste-of-people.component.html
@@ -1,6 +1,6 @@
 <section class="tw-mt-8">
     <header>
-        <span class="tw-ml-7">For your taste</span>
+        <span class="tw-ml-7 tw-text-color1">For your taste</span>
     </header>
     <main>
         <div class="tw-flex tw-flex-row tw-place-content-center tw-justify-center tw-items-center">
@@ -21,7 +21,7 @@
 
             @if (showMore) {
                 <div class="tw-flex tw-place-content-center tw-justify-center">
-                        <button class="tw-bg-color1 tw-rounded-md tw-text-color5 tw-h-8 tw-w-20">show more</button>   
+                        <button class="tw-bg-color3 tw-rounded-md tw-text-color5 tw-h-8 tw-w-20">show more</button>   
                 </div>
             }
         </div>
