--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -4,4 +4,6 @@
     <app-taste-of-people></app-taste-of-people>
 
     <app-popular-dishes></app-popular-dishes>
+
+    <app-footer></app-footer>
 </div>
