work on restaurantPage

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -5,4 +5,8 @@
     margin: 0 auto;
     overflow-y: unset;
     // height: 100dvh;
+    height: 950px;
+    box-sizing: border-box;
+    border: 2px solid gray;
+    border-radius: 8px
 }
