--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,4 +1,4 @@
-<div class="tw-flex tw-flex-row tw-place-content-around tw-mt-3">
+<div class="tw-flex tw-w-[450px] tw-flex-row tw-place-content-around tw-mt-3 tw-fixed tw-bottom-0">
     <span class="material-symbols-outlined">
         restaurant
     </span>
