--- a/src/app/components/home/taste-of-people/taste-of-people.component.html
+++ b/src/app/components/home/taste-of-people/taste-of-people.component.html
@@ -11,7 +11,7 @@
                         {{item.description}}
                     </p>
                     <div class="tw-flex tw-justify-center tw-place-content-center tw-mt-6">
-                      <button class="tw-flex tw-w-2/4 tw-justify-center tw-rounded-md tw-text-white tw-place-content-center tw-bg-color2">try it</button>  
+                      <button class="tw-flex tw-w-2/4 tw-justify-center tw-rounded-md tw-text-white tw-place-content-center tw-bg-color2" [routerLink]="['/restaurantPage', item.id]">try it</button>  
                     </div>
                     
                 </p-card>
