--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,12 +1,15 @@
 /* You can add global styles to this file, and also import other style files */
+// dont use tailwind with primeng never ever
 
+// @tailwind base;
+// @tailwind components;
+// @tailwind utilities;
+
+// @import "tailwindcss/base" layer(tailwindcss);
+// @import "tailwindcss/components" layer(tailwindcss);
+// @import "tailwindcss/utilities" layer(tailwindcss);
 @import "primeng/resources/themes/lara-light-blue/theme.css";
 @import "primeng/resources/primeng.css";
-
-
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
 
 @import 'assets/fonts/yekan/yekanbakh.css';
 
