--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,9 +5,9 @@
 // @tailwind components;
 // @tailwind utilities;
 
-// @import "tailwindcss/base" layer(tailwindcss);
-// @import "tailwindcss/components" layer(tailwindcss);
-// @import "tailwindcss/utilities" layer(tailwindcss);
+@import "tailwindcss/base" layer(tailwindcss);
+@import "tailwindcss/components" layer(tailwindcss);
+@import "tailwindcss/utilities" layer(tailwindcss);
 @import "primeng/resources/themes/lara-light-blue/theme.css";
 @import "primeng/resources/primeng.css";
 
