--- a/src/styles.scss
+++ b/src/styles.scss
@@ -14,3 +14,6 @@
 @import 'assets/fonts/yekan/yekanbakh.css';
 
 *{font-family: yekanbakh,serif}
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
